---
source: src/tests/commit.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch and 'origin/main' have diverged,and have 1 and 1 different commits |
each, respectively.                                                             |
                                                                                |
 Recent commits                                                                 |
 5dfe782 main add initial-file                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git commit --amend --no-edit                                                  |
styles_hash: 289029b9617670c2
